# jcu-node-ipc

./: CMakeLists.txt
include/jcu/node_ipc/: client.h  instance.h  ipc_config.h  session_attr.h
sample/: CMakeLists.txt  main.cpp
src/: client.cpp
src/utils/: trie_search.cpp  trie_search.h
